syntax = "proto3";

package service;

service Service {
  rpc GetSolidityCode(GetSolidityCodeRequest) returns (GetSolidityCodeResponse) {}
}

message GetSolidityCodeRequest {
}

message GetSolidityCodeResponse {
  bool compiled = 1;
  map<string, string> code = 2;
}
